# ScratchEverywhere

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-release.sh
.github/workflows/: nightly-3ds.yml  nightly-gamecube.yml  nightly-switch.yml  nightly-vita.yml  nightly-wii.yml  nightly-wiiu.yml
docker/: Dockerfile.3ds  Dockerfile.gamecube  Dockerfile.linux  Dockerfile.switch  Dockerfile.vita  Dockerfile.wii  Dockerfile.wiiu
gfx/3ds/: makerom.rsf.in
make/: Makefile_3ds  Makefile_gamecube  Makefile_pc  Makefile_switch  Makefile_vita  Makefile_wasm  Makefile_wii  Makefile_wiiu
source/: main.cpp
source/3ds/: image.cpp  render.cpp
source/headless/: audio.cpp  image.cpp  input.cpp  render.cpp
source/scratch/: audio.hpp  blockExecutor.cpp  color.hpp  image.hpp  input.hpp  interpret.cpp  interpret.hpp  math.cpp  math.hpp  os.cpp  render.hpp  sprite.hpp  text.cpp  unzip.cpp  unzip.hpp  value.hpp
source/scratch/blocks/: motion.cpp  pen.cpp  pen.hpp  translate.cpp  translate.hpp
source/scratch/menus/: mainMenu.cpp  mainMenu.hpp
source/sdl/: image.cpp  keyboard.cpp  render.cpp  unzip.cpp
source/sdl/audio/: audio.cpp  audio.hpp
